# Ataria

./: .gitignore  README.md  docker-compose.yml  docker-compose_dev.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/application/helpers/: logger.rs
backend/src/application/jwt/: jwt.rs
backend/src/application/middlewares/: jwt_middleware.rs
backend/src/application/states/: app_state.rs
backend/src/domain/entities/: auth.rs  todo.rs  user.rs
backend/src/presentation/handlers/: auth_handler.rs  mod.rs  todo_handler.rs
backend/src/presentation/routes/: auth_routes.rs  mod.rs  todo_routes.rs
frontend/: .eslintrc.json  .gitignore  Makefile  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/api/todos/: index.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/features/: page.tsx
frontend/app/homepage/: page.tsx
frontend/app/toppage/: page.tsx
frontend/components/: AuthenticationForm.tsx  Cta.tsx  Footer.tsx  Navbar.tsx  UserAvatar.tsx
frontend/components/Button/: CommonButton.tsx
frontend/components/Column/: Column.tsx
frontend/components/Input/: Input.tsx
frontend/components/Modal/: EditModal.tsx  LoginModal.tsx  SignupModal.tsx
frontend/components/Task/: Task.tsx
frontend/components/ui/: Avatar.tsx  ColorfulButton.tsx  DropdownMenu.tsx  OutlineButton.tsx  SimpleColorfulButton.tsx  Toast.tsx  Toaster.tsx
frontend/constants/: message.ts
frontend/context/: AuthContext.tsx
frontend/hooks/: use-toast.ts
frontend/types/: type.ts
(+1 files in other folders)
