[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# app
axum = "0.7.9"
lambda_http = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.1"
futures = "0.3.31"

# db
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }

# auth
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
bcrypt = "0.16.0"

# async
tokio = { version = "1", features = ["full", "macros"] }
async-trait = "0.1.83"

# serde
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# time
chrono = { version = "0.4.38", features = ["serde"] }

# logs
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
lazy_static = "1.5.0"

# env
dotenvy = "0.15.7"

# logic
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.11.1"
uuid = { version = "1.11.0", features = ["v4", "v7"] }
validator = { version = "0.19.0", features = ["derive"] }
once_cell = "1.20.2"

[dev-dependencies]
mockall = "0.13.0"
